modify margin of my pic

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
 
         <div class="container">
-            <img src="amer.jpeg" alt="me" height="200" width="200">
+            <img id="me" src="amer.jpeg" alt="me" height="200" width="200">
             <h1>Hey, I am amer</h1>
             <p>I am turning 20 next month and i am a CS student at EELU</p>
             <p>I am making this web page to apply what i've learned in html+css</p>
