--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <body>
 
         <div class="container">
-            <img id="me" src="amer.jpeg" alt="me" height="200" width="200">
+            <img id="me" src="avatar.jpeg" alt="me" height="200" width="200">
             <h1>Hey, I am amer</h1>
-            <p>I am making this web page to apply what i've learned in html+css</p>
+            <p>and these posters made with passion</p>
             <p>Soooo enjoy the show!</p>
         <div>
             <img src="imgs/the-shawshank-redemption.jpg" alt="the-shawshank-redemption" width="540" height="615">
