--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
 
         <div class="container">
-            <img id="me" src="avatar.jpeg" alt="me" height="200" width="200">
+            <img id="me" src="avatar.jpg" alt="me" height="200" width="200">
             <h1>Hey, I am amer</h1>
             <p>and these posters made with passion</p>
             <p>Soooo enjoy the show!</p>
